# imq

./: Makefile  README.md  imq.pro  main.cpp
cmake_sample/mac_bundle/: CMakeLists.txt  main.cpp
